--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "simple-login-widget",
-    "version": "1.0.0",
-    "description": "simple login widget",
+    "name": "simple-feedback-widget",
+    "version": "1.0.41",
+    "description": "simple feedback widget",
     "main": "dist/index.js",
     "scripts": {
         "build": "babel src --out-dir dist"
@@ -13,24 +13,27 @@
         "@babel/core": "^7.24.8",
         "@babel/preset-env": "^7.24.8",
         "@babel/preset-react": "^7.24.7",
+        "html2canvas": "^1.3.3",
         "jsencrypt": "^3.3.2",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "use-react-screenshot": "^4.0.0"
     },
     "peerDependencies": {
+        "html2canvas": "^1.3.3",
         "react": "^16.4.1",
         "react-dom": "^16.4.1"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/chandandas/simple-login-widget.git"
+        "url": "https://github.com/chandandas/simple-feedback-widget.git"
     },
     "keywords": [
-        "login",
+        "feedback",
         "widget"
     ],
     "bugs": {
-        "url": "https://github.com/chandandas/simple-login-widget"
+        "url": "https://github.com/chandandas/simple-feedback-widget"
     },
-    "homepage": "https://github.com/chandandas/simple-login-widget"
+    "homepage": "https://github.com/chandandas/simple-feedback-widget"
 }
